--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat pariatur ipsam commodi eum, quo ea illum eius esse aliquam placeat nemo animi blanditiis, quae, maxime laudantium autem voluptatibus soluta repellendus!</div>
     <label for="rub">RUB</label>
     <input id="rub" type="text">
     <label for="usd">USD</label>
