--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body>
+    <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla illum commodi ipsum autem at labore assumenda aperiam laboriosam fugiat, necessitatibus officiis, perspiciatis vel ipsam ab. Beatae alias ea exercitationem facere.</div>
     <label for="rub">RUB</label>
     <input id="rub" type="text">
     <label for="usd">USD</label>
