--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </style>
 </head>
 <body>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium aliquid maxime mollitia ex quod repellendus, eius deserunt. Unde saepe repudiandae cupiditate ex voluptatum autem ullam possimus ducimus? Autem, excepturi at.</div>
     <label for="rub">RUB</label>
     <input id="rub" type="text">
     <label for="usd">USD</label>
