addd two lines text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 <body>
     <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla illum commodi ipsum autem at labore assumenda aperiam laboriosam fugiat, necessitatibus officiis, perspiciatis vel ipsam ab. Beatae alias ea exercitationem facere.</div>
+    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias, unde accusantium voluptatem omnis sed maiores velit ea et quia, amet similique illo odit iure. Laboriosam maxime ipsam quidem rem placeat!</div>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis cum numquam quaerat molestias reprehenderit asperiores dolore vel commodi ea doloremque facere illum exercitationem, quidem alias hic, porro nulla ducimus recusandae!</div>
     <label for="rub">RUB</label>
     <input id="rub" type="text">
     <label for="usd">USD</label>
