--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
     <div>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla illum commodi ipsum autem at labore assumenda aperiam laboriosam fugiat, necessitatibus officiis, perspiciatis vel ipsam ab. Beatae alias ea exercitationem facere.</div>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, beatae fugit harum omnis ex sed alias nam. Cum voluptatum at deleniti dolores, tenetur delectus? Illo deserunt natus veritatis laboriosam id.</div>
     <label for="rub">RUB</label>
     <input id="rub" type="text">
     <label for="usd">USD</label>
